--- a/app/styles/pages/schedule.scss
+++ b/app/styles/pages/schedule.scss
@@ -35,6 +35,10 @@ $name: 'page-schedule';
   paper-tabs {
     max-width: 450px;
   }
+
+  paper-dropdown-menu {
+    flex-shrink: 0;
+  }
 }
 
 .page__section {
@@ -73,6 +77,11 @@ core-icon[icon="schedule"] {
   }
   .masthead-container {
     padding-bottom: $subnavTabsPadding;
+  }
+  .masthead-meta {
+    paper-dropdown-menu {
+      right: $mobileKeyline + 40px; // fab width + mobileKeyline
+    }
   }
   .card__container {
     @include shadow-z1();
